<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanCheckOutActivity">

    <TextView
        android:id="@+id/txtNameSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nameLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtIdNoSCO"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedNameTxtSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/nametxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtNameSCO"
        app:layout_constraintTop_toTopOf="@+id/txtNameSCO" />

    <TextView
        android:id="@+id/txtIdNoSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/idNoLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtHPSCO"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedIDTxtSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/idNotxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtIdNoSCO"
        app:layout_constraintTop_toTopOf="@+id/txtIdNoSCO" />

    <TextView
        android:id="@+id/txtHPSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hpNoLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtPICSCO"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedHPTxtSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/hpNotxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtHPSCO"
        app:layout_constraintTop_toTopOf="@+id/txtHPSCO" />

    <TextView
        android:id="@+id/txtPICSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/picLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtReasonSCO"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedPICTxtSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/pictxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtPICSCO"
        app:layout_constraintTop_toTopOf="@+id/txtPICSCO" />

    <TextView
        android:id="@+id/txtReasonSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reasonLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnReturnChckOutSCO"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedReasonxtSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/reasontxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtReasonSCO"
        app:layout_constraintTop_toTopOf="@+id/txtReasonSCO" />

    <Button
        android:id="@+id/btnReturnChckOutSCO"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="Return"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />

    <Button
        android:id="@+id/btnChckOutSCO"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/checkOutBtn"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/visitorLblSCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/visitorLBl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scannedNameTxtSCO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>