<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/green"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="wrap_content"
            android:layout_height="97dp"
            android:text="@string/tempTxt"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/scanTempBtn"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtIdNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/idNoLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtHpNo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedIDTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/idNotxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtIdNo"
        app:layout_constraintTop_toTopOf="@+id/txtIdNo" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/nameLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtIdNo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtHpNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/hpNoLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtPIC"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="18dp"
        android:text="@string/picLbl"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scannedNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nametxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtUserName"
        app:layout_constraintTop_toTopOf="@+id/txtUserName" />

    <TextView
        android:id="@+id/scannedHPTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/hpNotxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtHpNo"
        app:layout_constraintTop_toTopOf="@+id/txtHpNo" />

    <TextView
        android:id="@+id/scannedPICTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/pictxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtPIC"
        app:layout_constraintTop_toTopOf="@+id/txtPIC" />


</androidx.constraintlayout.widget.ConstraintLayout>