<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExportDataActivity">

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/pickStartDate"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtStart"
        app:layout_constraintTop_toTopOf="@+id/txtStart" />

    <TextView
        android:id="@+id/txtStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        android:text="@string/startDate"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtEnd"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="70dp"
        android:padding="8dp"
        android:text="@string/endDate"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnExport"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/pickEndDate"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtEnd"
        app:layout_constraintTop_toTopOf="@+id/txtEnd" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/exportCsvBtn"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>